# SkyNet

./: README.md
SkyNet-v1.2/: Makefile  README
SkyNet-v1.2-autotools/: LICENCE  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  skynet-1.2.pc.in
SkyNet-v1.2-autotools/data/: Makefile.am  Makefile.in  cdata_test.txt
SkyNet-v1.2-autotools/gnuscripts/: Makefile.am  Makefile.in
SkyNet-v1.2-autotools/inputs/: Makefile.am  Makefile.in  cdata_AE.inp  sinc.inp
SkyNet-v1.2-autotools/networks/: Makefile.in
SkyNet-v1.2-autotools/src/: CalculatePredictions.cc  Codec.cc  Makefile.am  Makefile.in  NNopt.cc  NNopt.h  PredictedData.h  RBMpretrain.cc  RBMpretrain.h  myrand.cc  whiten.h
SkyNet-v1.2-autotools/src/mpi/: Makefile.am  Makefile.in
SkyNet-v1.2/data/: cdata_train.txt  sinc_test.txt  sinc_train.txt
SkyNet-v1.2/inputs/: cdata.inp
SkyNet-v1.2/source/: Makefile  NNsimple.c  NNsimple.h  NeuralNetwork.h  TestRBM.cc  TextPredictions.cc  TrainingData.h  fnmatrix.cc  fnmatrix.h  linbcg.cc  linbcg.h  main.cc  myrand.h  skynet.cc
